case 4378 - Autocomplete z-index fix.

--- a/css/ting_search_autocomplete.css
+++ b/css/ting_search_autocomplete.css
@@ -1,6 +1,15 @@
-ul.ui-autocomplete { z-index:100 !important;max-width:300px;}
-  ul.ui-autocomplete li { text-align: left;}
-    ul.ui-autocomplete li a { font-size: 14px; }
+ul.ui-autocomplete {
+  z-index: 200;
+  max-width: 300px;
+}
+
+ul.ui-autocomplete li {
+  text-align: left;
+}
+
+ul.ui-autocomplete li a {
+  font-size: 14px;
+}
 
 input#edit-search-block-form--2.spinner {
   background-image: url(../img/spinner.gif);
